--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -8,6 +8,88 @@
  * You're free to add application-wide styles to this file and they'll appear at the top of the
  * compiled file, but it's generally better to create a new file per style scope.
  *
+ *= require base
+ *= reqire skeleton
+ *= require layout
  *= require_self
  *= require_tree .
  */
+
+body {
+  background: #E4E3DE;
+  font-size: 1.1em;
+  color: #6D6C68;
+}
+
+strong {
+  color: inherit;
+}
+
+h1 {
+  margin-top: 0.2em;
+  color: #DF9172;
+  font-size: 5em;
+  text-transform: uppercase;
+}
+
+h2 {
+  color: #B5B2AC;
+  font-style: italic;
+}
+
+h3 {
+  text-align: left;
+  color: #F0D8CF;
+  text-transform: uppercase;
+}
+
+p {
+  line-height: 1.5;
+}
+
+#wrapper {
+  max-width: 600px;
+  margin: 0 auto;
+  text-align: center;
+}
+
+#calculator {
+  color: #614D45;
+  background: #E7997A;
+  border: 7px solid #DF9172;
+  padding: 1em;
+  font-size: 1.3em;
+}
+
+hr {
+  border: 3px solid #DF9172;
+}
+
+button {
+  color: #546057;
+  font-size: 0.8em;
+  padding: 0.8em 2em;
+  background: #6FC286;
+  border: none;
+  box-shadow: 0 3px 0 #B1755D;
+  text-shadow: none;
+}
+
+button:hover {
+  background: #5EAA73;
+}
+
+label {
+  font-size: 0.8em;
+  margin-bottom: 1em;
+}
+
+footer {
+  margin-top: 2em;
+  font-size: 0.9em;
+  color: #B5B2AC;
+}
+
+footer a:link, a:visited {
+    color: #6D6C68;
+}
