--- a/app/views/calculations/index.html.erb
+++ b/app/views/calculations/index.html.erb
@@ -1,18 +1,38 @@
-<p> Calculate the hourly fluid requirements for a <%= @calculation.weight %>kg child who is <%= @calculation.dehydration %>% dehydrated.</p>
-<%= radio_button_tag 'method','hourly', checked = hourly_default %>
-<%=label_tag "4/2/1 Method" %>
-<%= radio_button_tag 'method','daily', checked = daily_default %><%=label_tag "100/50/20 Method" %>
+<h3>Patient</h3>
+<p>A <%= rand(4..13) %> year old <%= random_gender %> who's last weight was <strong><%= @calculation.weight %>kg</strong> and is currently <strong><%= @calculation.dehydration %>%</strong> dehydrated.</p>
 
-<button class="reveal_answer" onclick="javascript:Answer.reveal()">Reveal answer</button>
 
-<p class="hourly_answer">
-  <%= clean @calculation.hourly_method_hourly_total %>mL per hour,
-  <%= clean @calculation.hourly_method_total%>mL per day
-</p>
 
-<p class="daily_answer">
-  <%= clean @calculation.daily_method_hourly_total%>mL per hour,
-  <%= clean @calculation.daily_method_total%>mL per day.
-</p>
+<button class="reveal_answer" onclick="javascript:Answer.reveal()">Reveal Answer</button>
 
-<button onclick="history.go(0)">Next Problem</a>
+<div class="answer">
+  <h3>Answer</h3>
+  
+  <div class="hourly_answer">
+    <p><strong>10-20 mL</strong>/kg bolus</p>
+    <p>
+      <strong><%= clean @calculation.hourly_method_hourly_total %>mL</strong> per hour<br />
+      <strong><%= clean @calculation.hourly_method_total%>mL</strong> per day
+    </p>
+    <% if @calculation.hourly_method_total > 2399 %>
+      <p class="explanation">Note: 2400 mL per day is the normal maximum amount.</p>
+    <% end %>
+  </div>
+  <div class="daily_answer">
+    <p><strong>10-20 mL</strong>/kg bolus</p>
+    <p>
+      <strong><%= clean @calculation.daily_method_hourly_total%>mL</strong> per hour<br />
+      <strong><%= clean @calculation.daily_method_total%>mL</strong> per day
+    </p>
+      <% if @calculation.daily_method_total > 2399 %><p class="explanation">Note: 2400 mL per day is the normal maximum amount.</p><% end %>
+  </div>
+
+</div>
+
+<div class="clear"></div>
+<hr />
+
+
+
+<div class="clear"></div>
+<p id="next_problem"><a href="javascript:history.go(0)">Next Problem →</a></p>
