--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -37,10 +37,14 @@ h2 {
   font-style: italic;
 }
 
-h3 {
+h3,h4 {
   text-align: left;
   color: #F0D8CF;
   text-transform: uppercase;
+}
+
+h4 {
+  font-size: 0.9em;
 }
 
 p {
